# dri-report-platform

./: .gitignore  CLAUDE.md  README.md
deploy/: Caddyfile.dev  build_skill_wheel.sh  config.example.toml  config.prod.toml.example  push.sh  setup.sh
deploy/nginx/: dri-report.conf
deploy/systemd/: dri-report.service
docs/: TODO.md
server/: alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 0001_users.py  0002_reports.py  0003_tokens_audit.py  0005_users_admin.py
server/app/: audit.py  config.py  db.py  main.py  models.py  storage.py
server/app/api/: admin.py  reports.py  tokens.py
server/app/auth/: check.py  csrf.py  oidc.py  routes.py  session.py  tokens.py
server/app/mcp/: context.py  server.py
server/app/web/: routes.py
server/app/web/templates/: audit.html  base.html  index.html  report.html  tokens.html  upload.html  users.html
server/tests/e2e/: _helpers.py  conftest.py  test_admin.py  test_csrf.py  test_front_page.py  test_report_management.py  test_tokens.py  test_upload.py  test_view_as.py
server/tests/integration/: test_mcp.py  test_no_bypass.py  test_skill.py
skill/: README.md  SKILL.md  pyproject.toml
skill/hybe_reports/: cli.py  client.py  config.py  packager.py
