[project]
name = "hybe-reports"
version = "0.1.0"
description = "Hybe Reports Platform — Claude Code skill (CLI client)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "keyring>=25",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.9"]
dev = ["pytest>=8"]

[project.scripts]
hybe-reports = "hybe_reports.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hybe_reports"]
